--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.2.0",
     "prettier": "^2.2.1",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "typescript": "~4.1.5"
   }
 }
