--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.2.6"
+    "vue": "^3.2.6",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0-beta.7",
     "@vue/cli-plugin-pwa": "~5.0.0-beta.7",
     "@vue/cli-plugin-typescript": "~5.0.0-beta.7",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.7",
     "@vue/cli-service": "~5.0.0-beta.7",
     "@vue/compiler-sfc": "^3.2.6",
     "@vue/eslint-config-prettier": "^6.0.0",
