--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.1",
+    "axios": "^0.24.0",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "uuid": "^8.3.2",
     "vue": "^3.2.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@sicons/fa": "^0.11.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "@vicons/fa": "^0.11.0",
+    "@vicons/tabler": "^0.11.0",
+    "@vicons/utils": "^0.1.4",
     "@vue/cli-plugin-babel": "~5.0.0-beta.7",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.7",
     "@vue/cli-plugin-pwa": "~5.0.0-beta.7",
@@ -28,9 +35,11 @@
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.2.0",
+    "naive-ui": "^2.20.2",
     "prettier": "^2.2.1",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vfonts": "^0.1.0"
   }
 }
